# test_robot

./: .gitignore  README.md  capabilities.json  event_logger.py  pyproject.toml  simple_chat.py  test01_sessin_check.py  test02_simple_client.py  test_agent_with_screenshot.py  test_appium_activate_app.py  test_plan_and_execute_agent.py  test_screenshot.py  test_screenshot_with_recognition.py  test_tools.py  tools.md
